@@ -2,6 +2,9 @@ Changelog for Writer2LaTeX version 1.0 -> 1.2
 
 ---------- version 1.1.9 ----------
 
+[w2l] Bugfix: Ignore headings inside footnotes (export as normal paragraph). Footnotes should not contain headings, and this
+  change avoids an infinite loop if such a footnote is within a table.
+
 [w2l] Fixed bugs on the "Text and Math" options page (controls were not updated correctly leading to erratic behavior)
 
 [w2l] Added support for the font "Greek"
